| Summary: | ASTERISK-29660: Build failure when disabling PJSIP support | ||
| Reporter: | Guido Falsi (madpilot) | Labels: | |
| Date Opened: | 2021-09-17 14:43:04 | Date Closed: | 2021-09-21 10:59:41 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 16.21.0 18.7.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Seeing this on asterisk, but should apply to any OS | Attachments: | |
| Description: | In the asterisk port there is an option to disable PJSIP support, passing "--without-pjproject --without-pjproject-bundled" to the configure script.
WIth the latest RC versions this causes a build failure: {quote} res_rtp_asterisk.c:9041:22: error: use of undeclared identifier 'stunaddr_lock'; did you mean 'stunaddr_name'? ast_rwlock_rdlock(&stunaddr_lock); ^~~~~~~~~~~~~ stunaddr_name {quote} (more errors follow, same error for 16 and 18) Looking at {{res_rtp_asterisk.c}} it looks like most of the code involving {{stunaddr_lock}} is inside {{#ifdef HAVE_PJPROJECT}} blocks, including its definition. I'm going to submit a patch adding more {{#ifdef HAVE_PJPROJECT}} on the code using the missing definitions, so it builds, not sure if this is the correct fix though. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-09-17 14:43:07.357-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-09-21 10:59:42.911-0500 Change 16515 merged by Friendly Automation: res_rtp_asterisk.c: Fix build failure when not building with pjproject. [https://gerrit.asterisk.org/c/asterisk/+/16515|https://gerrit.asterisk.org/c/asterisk/+/16515] By: Friendly Automation (friendly-automation) 2021-09-21 11:02:02.823-0500 Change 16513 merged by Friendly Automation: res_rtp_asterisk.c: Fix build failure when not building with pjproject. [https://gerrit.asterisk.org/c/asterisk/+/16513|https://gerrit.asterisk.org/c/asterisk/+/16513] By: Friendly Automation (friendly-automation) 2021-09-21 11:03:41.955-0500 Change 16514 merged by Friendly Automation: res_rtp_asterisk.c: Fix build failure when not building with pjproject. [https://gerrit.asterisk.org/c/asterisk/+/16514|https://gerrit.asterisk.org/c/asterisk/+/16514] By: Friendly Automation (friendly-automation) 2021-09-21 11:05:11.044-0500 Change 16489 merged by Friendly Automation: res_rtp_asterisk.c: Fix build failure when not building with pjproject. [https://gerrit.asterisk.org/c/asterisk/+/16489|https://gerrit.asterisk.org/c/asterisk/+/16489] By: Friendly Automation (friendly-automation) 2021-09-21 12:40:38.093-0500 Change 16520 merged by Friendly Automation: res_rtp_asterisk.c: Fix build failure when not building with pjproject. [https://gerrit.asterisk.org/c/asterisk/+/16520|https://gerrit.asterisk.org/c/asterisk/+/16520] By: Friendly Automation (friendly-automation) 2021-09-21 12:54:02.861-0500 Change 16521 merged by Kevin Harwell: res_rtp_asterisk.c: Fix build failure when not building with pjproject. [https://gerrit.asterisk.org/c/asterisk/+/16521|https://gerrit.asterisk.org/c/asterisk/+/16521] | ||